# p2p_poc

./: pyproject.toml
src/non_p2p/: client.py  server.py
src/p2p_poc/: main.py
