[project]
name = "p2p-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Tejas K Jaiswal",email = "tejasjaiswal9711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "twisted (>=25.5.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
